# pyaleph

./: .coveragerc  .dockerignore  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CLAUDE.md  INSTALL.md  LICENSE.txt  README.md  alembic.ini  bad-queries.txt  code-of-conduct.md  justfile  mypy.ini  pyproject.toml  requirements.txt  sample-config.yml  setup.cfg  setup.py  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md  ci-config.yml  dependabot.yml  openssl-ci.cnf
.github/workflows/: build-docker-demo.yml  build-docker.yml  build.yml  code-quality.yml  nix-ci.yml  pyaleph-ci.yml  pytest.yml  test-keygen.yml
deployment/docker/: Dockerfile  README.md  build.sh  config.yml  docker-compose.yml
deployment/docker-build/: Dockerfile  README.md  aiohttp.diff  build.sh  cleaner.dockerfile  config.yml  docker-compose.yml  get_version.sh  kubo.json  openssl.cnf.patch  publish-alpha.sh  publish.sh  pyaleph.dockerfile
deployment/docker-compose/: README.md  docker-compose.yml
deployment/docker-demo/: Dockerfile  README.md  build.sh  config.yml  debug.sh  entrypoint.sh  run.sh  supervisord.conf
deployment/docker-monitoring/: READMEs.md  docker-compose.yml  prometheus.yml
deployment/docker-suite/: dashboard.grafana.json  docker-compose.yml
deployment/migrations/: config_updater.py  env.py
deployment/samples/: README.md
deployment/scripts/: 001-update-ipfs-config.sh  auth_token.py  backfill_credit_balances_running_balance.py  extract_requirements.py  get_config_value.py  ipfs_pin_cleaner.py  migrate_key_file_for_p2pd.py  reject_processed_messages.py  run_aleph_ccn.sh  run_aleph_ccn_api.sh  run_ipfs_cleanup.sh  sync_initial_messages.py  wait-for-it.sh  wait_for_services.sh
docs/: Makefile  architecture.rst  conf.py  index.rst  metrics.rst  node-synchronisation.rst
docs/architecture/: garbage_collector.rst  index.rst
docs/figures/: PyAleph architecture.graphml
docs/guides/: docker-compose.rst  index.rst  install.rst  installing.rst  native-install.rst  private_net.rst  upgrade.rst
docs/protocol/: authorizations.rst  index.rst  payment.rst  smart-wallet-signature-verification.md  smart-wallet-signatures.md
proto/: aleph_p2p.proto
scripts/: gen_grpc_stubs.sh
src/aleph/: __init__.py  api_entrypoint.py  cache.py  commands.py  config.py  exceptions.py  jobs.py  logging.py  network.py  permissions.py  register_chain.py  repair.py  settings.py  skeleton.py  storage.py  types.py  utils.py  version.py
src/node_scoring/: __init__.py
tests/: conftest.py  test_config_defaults.py  test_network.py  test_repair.py  test_skeleton.py  test_storage.py  test_utils_ipns.py
tests/api/: conftest.py  test_account_files.py  test_accounts.py  test_address_stats.py  test_aggregates.py  test_authorizations.py  test_balance.py  test_content_format.py  test_costs.py  test_credit_history.py  test_cursor_pagination.py  test_forgotten_price.py  test_get_message.py  test_ipfs.py  test_ipfs_car_real_kubo.py  test_ipns_api.py  test_list_forgotten_messages.py  test_list_messages.py  test_list_removed_messages.py  test_messages.py  test_new_metric.py  test_p2p.py  test_posts.py  test_pricing_recalculation.py  test_removed_price.py  test_storage.py  test_version.py  test_vprogram_api.py
tests/balances/: test_balances.py
tests/chains/: test_aleph_indexer.py  test_avalanche.py  test_chain_data_service.py  test_common.py  test_confirmation.py  test_cosmos.py  test_ethereum.py  test_ethereum_timeout.py  test_evm.py  test_evm_integration.py  test_near.py  test_neo.py  test_nuls2.py  test_on_chain_data.py  test_register.py  test_solana.py  test_substrate.py  test_tezos.py
tests/cli/: test_args.py
tests/db/: test_accounts.py  test_address_stats.py  test_aggregates.py  test_authorizations.py  test_backfill_credit_balances_running_balance.py  test_chains.py  test_cost.py  test_credit_balances.py  test_credit_expiration_task.py  test_credit_repair.py  test_error_codes.py  test_files.py  test_indexer_sync_status.py  test_ipns_accessors.py  test_ipns_models.py  test_messages.py  test_metrics_persistence.py  test_peers.py  test_pending_messages_db.py  test_pending_txs.py  test_permission_comparisons.py  test_posts.py  test_programs_db.py  test_vprograms_db.py
tests/garbage_collector/: test_api_storage_and_gc.py  test_cancel_scheduled_deletion.py  test_delete_file.py  test_scheduled_deletions.py
tests/helpers/: car_test_utils.py  in_memory_storage_engine.py  message_test_helpers.py
tests/jobs/: test_balance_job.py  test_check_removing_messages.py  test_credit_balance_job.py  test_cron_job.py  test_fetch_pending_messages.py  test_jobs_runner.py  test_metrics_partition_job.py  test_retry_backoff.py
tests/message_processing/: conftest.py  load_fixtures.py  test_perform_db_operations.py  test_process_aggregates.py  test_process_confidential.py  test_process_forgets.py  test_process_forgotten_messages.py  test_process_instances.py  test_process_ipns_stores.py  test_process_pending_messages.py  test_process_pending_txs.py  test_process_posts.py  test_process_programs.py  test_process_stores.py  test_process_vprograms.py
tests/messages/: test_scoring_metrics.py  test_vprogram.py
tests/models/: test_peer.py
tests/p2p/: conftest.py  test_connect.py  test_identify.py  test_pubsub.py
tests/permissions/: test_check_sender_authorization.py  test_forget_permissions.py
tests/schemas/: test_credit_transfer.py  test_pending_messages.py  test_validated_messages.py
tests/services/: test_cost.py  test_cost_ipns.py  test_cost_service.py  test_cost_service_volumes.py  test_cost_service_vprogram.py  test_fileystem_engine.py  test_garbage_collector.py  test_ipfs_common.py  test_ipfs_dag_import.py  test_ipfs_ipns.py  test_ipfs_service.py  test_ipns_republisher.py  test_node_cache.py  test_p2p_http.py  test_pricing_utils.py  test_utils.py
tests/storage/: conftest.py  test_forget_message.py  test_get_content.py  test_store_message.py
tests/toolkit/: test_batch.py  test_car.py  test_cursor.py  test_ecdsa.py  test_ignore_exceptions.py  test_json.py  test_lifecycle.py  test_pending_queue.py  (+3 more)
(+439 files in other folders)
