# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyaleph
description = Reference implementation of Aleph.im next generation network of decentralized big data applications.
author = Moshe Malawach
author_email = moshe.malawach@protonmail.com
license = mit
url = https://aleph.im
long_description = file: README.md
long_description_content_type = text/markdown
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires =
      pyscaffold>=3.1a0,<3.2a0
      pytest-runner>=2.0,<3dev
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    aiocache==0.11.1
    aiohttp-cors==0.7.0
    aiohttp-jinja2==1.5
    aiohttp-session[secure]==2.10.0
    aiohttp==3.8.1
    aioipfs@git+https://github.com/aleph-im/aioipfs.git@76d5624661e879a13b70f3ea87dc9c9604c7eda7
    aleph-client==0.4.6
    aleph-message==0.2.1
    aleph-pytezos@git+https://github.com/aleph-im/aleph-pytezos.git@97fe92ffa6e21ef5ec17ef4fa16c86022b30044c
    coincurve==15.0.1
    configmanager==1.35.1
    configparser==5.2.0
    cosmospy==6.0.0
    dataclasses_json==0.5.6
    eth-keys==0.3.3
    eth-rlp==0.2.1
    eth_account==0.5.6
    hexbytes==0.2.2
    motor==2.5.1
    msgpack==1.0.3  # required by aiocache
    nuls2-python@git+https://github.com/aleph-im/nuls2-python.git
    p2pclient==0.2.0
    pymongo==3.12.3
    pynacl==1.5.0
    python-dateutil==2.8.2
    python-socketio==5.5.1
    pytz==2021.3
    pyyaml==6.0
    requests==2.27.1
    secp256k1==0.14.0
    sentry-sdk==1.5.11
    setproctitle==1.2.2
    substrate-interface==1.1.7
    ujson==5.1.0  # required by aiocache
    urllib3==1.26.8
    uvloop==0.16.0
    web3==5.26.0

dependency_links =
    https://github.com/aleph-im/py-libp2p/tarball/0.1.4-1-use-set#egg=libp2p
    https://github.com/aleph-im/nuls2-python/tarball/master#egg=nuls2-python
    https://github.com/aleph-im/aioipfs/tarball/hoh-more-exceptions#egg=aioipfs

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pyaleph[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    mypy==0.950
    pytest
    pytest-cov
    pytest-aiohttp
    pytest-asyncio
    pytest-mock
    types-requests
    types-setuptools
nuls2 =
    nuls2-python @ git+https://github.com/aleph-im/nuls2-python.git
polkadot =
    substrate-interface>=0.9.27
cosmos =
    cosmospy
docs =
    sphinxcontrib-plantuml

[options.entry_points]
# Add here console scripts like:
console_scripts =
   pyaleph = aleph.commands:run
# For example:
# console_scripts =
#     fibonacci = pyaleph.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# --cov aleph --cov-report term-missing
addopts =
    --disable-pytest-warnings
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = aleph
extensions =
    markdown
